# AVR_Interfacing_CMake

./: README.md
COTS/: CMakeLists.txt  Drivers.cmake  avr-gcc-toolchain.cmake
COTS/APP/LAB2/Task1/: CMakeLists.txt  main.c
COTS/APP/LAB2/Task2/: CMakeLists.txt  main.c
COTS/APP/LAB3/Task1/: CMakeLists.txt  main.c
COTS/APP/LABS/Task1/: CMakeLists.txt  main.c
COTS/APP/SwitchLedTest_with_MPORT/: CMakeLists.txt  main.c
COTS/Common/: BIT_MATH.h  MemMap.h  STD_TYPES.h
COTS/HAL/LED/inc/: LED.h  LED_cfg.h
COTS/HAL/LED/src/: LED.c  LED_cfg.c
COTS/HAL/SWITCH/inc/: SWITCH.h  SWITCH_cfg.h
COTS/HAL/SWITCH/src/: SWITCH.c  SWITCH_cfg.c
COTS/MCAL/MDIO/inc/: MDIO.h  MDIO_cfg.h
COTS/MCAL/MDIO/src/: MDIO.c  MDIO_cfg.c
COTS/MCAL/MPORT/inc/: MPORT.h  MPORT_cfg.h
COTS/MCAL/MPORT/src/: MPORT.c  MPORT_cfg.c
